# computer-programming

./: Snake.cpp  log
CP2/final/: Makefile  bmp.c  fin01  fin03  fin03.h  test.c
CP2/hw01/: .~lock.README#  README  hw0101  hw0102  hw0102.c  hw0102.in  hw0103  hw0103.c  hw0103.in  hw0104  hw0104.c  hw0105  hw0105.c  makefile  mystring.c  rational.c  rational.h  test  test.c  test.in
CP2/hw02/: README.md  hw0201  (+9 more)
ICPC/: Pc  Pc.cpp  makefile
NM/: 40847025S.cpp  FPI.cpp  Gauss_Newton.cpp  Lagrange.cpp  Least_Squares.cpp  Makefile  Multivariate_Newton.cpp  Newton_divided_differences.cpp  QR_Factorization.cpp  hw03.cpp  matrix.cpp  matrix.h  test.cpp
NTNU/CP2/test/maketest/project/: configure  configure.ac
NTNU/CP2/test/maketest/project/autom4te.cache/: output.0  output.5  requests  traces.4
NTNU/CP2/test/maketest/project/src/: agent.c  game.h  main.c
OS/: 01  01.c  01.s
POJ/: 2229  2229.cpp  makefile
class/: char_transform.c  dice  dice.c  sort.c  strtoint  strtoint.c  swap
java/: Hanoi.java
leetcode/: isPalindrome  isPalindrome.c
maze/: index.html  main.js  style.css
midtern/: make
python/: test.py  錄取通知.csv
tensorflow/: fashion.py  game.py  gan_fashion.py  gpu_test.py  load.py
test/: 01  01.c  01.cpp  02  02.c  02.cpp  03  03.c  03.cpp  04  04.cpp  05  05.c  05.cpp  05.in  05.sh  Linklist  Linklist.c  Matrix  Matrix.cpp  QQ.cpp  QQ2.c  a  a.cpp  async.cpp  cool.cpp  hello.c  input  main  main.c  makefile  multitype.cpp  pA.cpp  pB.cpp  permu.cpp  ptof  ptof.c  run.sh  switch.cpp  test  (+2 more)
vim/: .vimrc
zerojudge/: d626(BFS)  d626(BFS).cpp
(+797 files in other folders)
